# Qt-Homework

Qt/Lesson 10/Task 1/: mainwindow.cpp  structs.h  tcpclient.cpp
Qt/Lesson 2/Task 1/: CMakeLists.txt  main.cpp
Qt/Lesson 3/Task 1/: CMakeLists.txt  mainwindow.ui
Qt/Lesson 4/Task 1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Lesson 5/Task 1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/Lesson 6/Task 1/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qt/Lesson 7/Task 1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Lesson 8/Task 1/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Lesson 9/Task 1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Qt/Сoursework/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  workloadwindow.cpp  workloadwindow.h  workloadwindow.ui
Test/Task2/: README.md  Test_Task2.1.cpp
